Make the nav links relative

--- a/index.html
+++ b/index.html
@@ -257,26 +257,26 @@
           <a
             class="nav-item"
             itemprop="name"
-            href="https://www.erikpaluka.com/contact/"
+            href="/contact/"
             >Contact</a
           >
           <a
             class="nav-item"
             itemprop="name"
-            href="https://www.erikpaluka.com/images/"
+            href="/images/"
             >Images</a
           >
           <!--<a <?php if (strpos($_SERVER['PHP_SELF'], 'projects/')) echo 'class="nav-item-current"'; else echo 'class="nav-item"';?> itemprop="name" href="https://www.erikpaluka.com/projects/">Projects</a>-->
           <a
             class="nav-item"
             itemprop="name"
-            href="https://www.erikpaluka.com/publications/"
+            href="/publications/"
             >Publications</a
           >
           <a
             class="nav-item"
             itemprop="name"
-            href="https://www.erikpaluka.com/research/"
+            href="/research/"
             >Research</a
           >
           <!--<a <?php if (strpos($_SERVER['PHP_SELF'], 'bio/index.php')) echo 'class="nav-item-current"'; else echo 'class="nav-item"';?> itemprop="name" href="https://www.erikpaluka.com/bio/">Bio</a>-->
