set images header links to be relative

--- a/images/index.html
+++ b/images/index.html
@@ -177,31 +177,18 @@
           itemtype="https://schema.org/SiteNavigationElement"
         >
           <h2 class="hide">Site menu:</h2>
-          <a
-            class="nav-item"
-            itemprop="name"
-            href="https://www.erikpaluka.com/contact/"
-            >Contact</a
-          >
+          <a class="nav-item" itemprop="name" href="/contact/">Contact</a>
           <a
             class="nav-item-current"
             itemprop="name"
-            href="https://www.erikpaluka.com/contact/"
+            href="https://www.erikpaluka.com/images/"
             >Images</a
           >
           <!--<a <?php if (strpos($_SERVER['PHP_SELF'], 'projects/')) echo 'class="nav-item-current"'; else echo 'class="nav-item"';?> itemprop="name" href="https://www.erikpaluka.com/projects/">Projects</a>-->
-          <a
-            class="nav-item"
-            itemprop="name"
-            href="https://www.erikpaluka.com/publications/"
+          <a class="nav-item" itemprop="name" href="/publications/"
             >Publications</a
           >
-          <a
-            class="nav-item"
-            itemprop="name"
-            href="https://www.erikpaluka.com/research/"
-            >Research</a
-          >
+          <a class="nav-item" itemprop="name" href="/research/">Research</a>
           <!--<a <?php if (strpos($_SERVER['PHP_SELF'], 'bio/index.php')) echo 'class="nav-item-current"'; else echo 'class="nav-item"';?> itemprop="name" href="https://www.erikpaluka.com/bio/">Bio</a>-->
           <!--<a <?php if (strpos($_SERVER['PHP_SELF'], 'blog/')) echo 'class="nav-item-current"'; else echo 'class="nav-item"';?> itemprop="name" href="https://www.erikpaluka.com/blog/">Blog</a>-->
           <!--<a <?php /*if (strpos($_SERVER['PHP_SELF'], 'algorithms/')) echo 'class="nav-item-current"'; else echo 'class="nav-item"';*/ ?> itemprop="name" href="https://www.erikpaluka.com/algorithms/">Algorithms</a>-->
