set current nav item for contact and publications

--- a/contact/index.html
+++ b/contact/index.html
@@ -174,7 +174,9 @@
           itemtype="https://schema.org/SiteNavigationElement"
         >
           <h2 class="hide">Site menu:</h2>
-          <a class="nav-item" itemprop="name" href="/contact/">Contact</a>
+          <a class="nav-item-current" itemprop="name" href="/contact/"
+            >Contact</a
+          >
           <a class="nav-item" itemprop="name" href="/images/">Images</a>
           <!--<a class="nav-item" itemprop="name" href="https://www.erikpaluka.com/projects/">Projects</a>-->
           <a class="nav-item" itemprop="name" href="/publications/"
