--- a/publications/index.html
+++ b/publications/index.html
@@ -177,7 +177,7 @@
           <a class="nav-item" itemprop="name" href="/contact/">Contact</a>
           <a class="nav-item" itemprop="name" href="/images/">Images</a>
           <!--<a class="nav-item" itemprop="name" href="https://www.erikpaluka.com/projects/">Projects</a>-->
-          <a class="nav-item" itemprop="name" href="/publications/"
+          <a class="nav-item-current" itemprop="name" href="/publications/"
             >Publications</a
           >
           <a class="nav-item" itemprop="name" href="/research/">Research</a>
