add current nav item to research

--- a/research/index.html
+++ b/research/index.html
@@ -183,7 +183,9 @@
           <a class="nav-item" itemprop="name" href="/publications/"
             >Publications</a
           >
-          <a class="nav-item" itemprop="name" href="/research/">Research</a>
+          <a class="nav-item-current" itemprop="name" href="/research/"
+            >Research</a
+          >
           <!--<a class="nav-item" itemprop="name" href="https://www.erikpaluka.com/bio/">Bio</a>-->
           <!--<a class="nav-item" itemprop="name" href="https://www.erikpaluka.com/blog/">Blog</a>-->
           <!--<a class="nav-item" itemprop="name" href="https://www.erikpaluka.com/algorithms/">Algorithms</a>-->
