replace http with https for erikpaluka.com

--- a/error.html
+++ b/error.html
@@ -196,7 +196,7 @@
 
         <br />
 
-        <img src="http://erikpaluka.com/img/sadpuppy.jpg" />
+        <img src="https://erikpaluka.com/img/sadpuppy.jpg" />
       </div>
 
       <div id="footer">
