--- a/projects/index.html
+++ b/projects/index.html
@@ -342,19 +342,19 @@
       <!--<h1 class="projectCategory">Personal Websites</h1>-->
       <!--<div class="projectRow">-->
 
-      <!--    <a href="http://www.erikpaluka.com/">-->
+      <!--    <a href="https://www.erikpaluka.com/">-->
       <!--        <div class="researchProject">-->
       <!--            <img alt="ErikPaluka.com" src="../img/projects/website.jpg" width="250" height="250">-->
       <!--            <div class="projectTitle">www.ErikPaluka.com</div>-->
       <!--        </div>-->
       <!--    </a>-->
-      <!--    <a href="http://www.erikpaluka.com/sites/bootstrap/">-->
+      <!--    <a href="https://www.erikpaluka.com/sites/bootstrap/">-->
       <!--        <div class="researchProject">-->
       <!--            <img alt="Fluid Site" src="../img/projects/fluidSite-small.jpg" width="250" height="250">-->
       <!--            <div class="projectTitle">Fluid Website</div>-->
       <!--        </div>-->
       <!--    </a>-->
-      <!--    <a href="http://www.erikpaluka.com/sites/singleHTML/">-->
+      <!--    <a href="https://www.erikpaluka.com/sites/singleHTML/">-->
       <!--        <div class="researchProject">-->
       <!--            <img alt="Single Dynamic HTML Page" src="../img/projects/1PageSite.jpg" width="250" height="250">-->
       <!--            <div class="projectTitle">Single Dynamic-->
