--- a/publications/index.html
+++ b/publications/index.html
@@ -339,7 +339,7 @@
 
         <div class="publication">
           <a
-            href="http://www.erikpaluka.com/research/off-screen-desktop/"
+            href="https://www.erikpaluka.com/research/off-screen-desktop/"
             target="_blank"
             title="Link to Project"
             >System and Method For Spatial Interaction For Viewing and
@@ -377,7 +377,7 @@
 
           <a
             class="paperLink"
-            href="http://www.erikpaluka.com/research/off-screen-desktop/"
+            href="https://www.erikpaluka.com/research/off-screen-desktop/"
             target="_blank"
             title="Link to Project"
             >Spatial Peripheral Interaction Techniques for Viewing and
@@ -648,7 +648,7 @@
         <div class="year">2014</div>
         <div class="publication">
           <a
-            href="http://www.erikpaluka.com/research/spatialvis/"
+            href="https://www.erikpaluka.com/research/spatialvis/"
             target="_blank"
             title="Project Page"
             >Visualization of Logged Spatial Interaction Data</a
