--- a/research/smt/index.html
+++ b/research/smt/index.html
@@ -163,7 +163,7 @@
             <span class="bold">Publications</span>
             <br>
 
-            <a href="http://www.erikpaluka.com/files/2016-Paluka-SimpleMulti-Touch.pdf" target="_blank" title="Download file">The Simple Multi-Touch Toolkit</a>
+            <a href="https://www.erikpaluka.com/files/2016-Paluka-SimpleMulti-Touch.pdf" target="_blank" title="Download file">The Simple Multi-Touch Toolkit</a>
                 <br>
                 <div class="font-small">
             Kalev Sikes, Zachary Cook, <span class="bold">Erik Paluka</span>, Mark Hancock, Christopher Collins
