--- a/research/tandemtable/index.html
+++ b/research/tandemtable/index.html
@@ -253,7 +253,7 @@
         <br />
 
         <a
-          href="http://www.erikpaluka.com/files/2012-Paluka-Undergrad_Thesis.pdf"
+          href="https://www.erikpaluka.com/files/2012-Paluka-Undergrad_Thesis.pdf"
           target="_blank"
           title="Download file"
           >Enhancing Tandem Language Learning Using an Interactive Tabletop</a
