--- a/research/off-screen-desktop/index.html
+++ b/research/off-screen-desktop/index.html
@@ -226,7 +226,7 @@
         <br />
 
         <a
-          href="http://www.erikpaluka.com/files/2015-Paluka-Master-Thesis.pdf"
+          href="https://www.erikpaluka.com/files/2015-Paluka-Master-Thesis.pdf"
           target="_blank"
           title="Download file"
           >Spatial Peripheral Interaction Techniques for Viewing and
