remove www for erik urls. fix <a> and // typos

--- a/projects/webGL/webgl.html
+++ b/projects/webGL/webgl.html
@@ -6,14 +6,8 @@
       itemprop="description"
       content="Erik specializes in human-computer interaction and is currently working on his master's degree in computer science at the University of Ontario Institute of Technology."
     />
-    <meta
-      itemprop="image"
-      content="https://www.erikpaluka.com/images/erik.jpg"
-    />
-    <link
-      rel="SHORTCUT ICON"
-      href="https://www.erikpaluka.com/images/taz.ico"
-    />
+    <meta itemprop="image" content="https://erikpaluka.com/images/erik.jpg" />
+    <link rel="SHORTCUT ICON" href="https://erikpaluka.com/images/taz.ico" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Erik Paluka</title>
     <link
@@ -179,7 +173,7 @@
 
         <div style="padding-left: 40px; float: left">
           <!-- Place this tag where you want the +1 button to render. -->
-          <div class="g-plusone" data-href="https://www.erikpaluka.com/"></div>
+          <div class="g-plusone" data-href="https://erikpaluka.com/"></div>
 
           <!-- Place this tag after the last +1 button tag. -->
           <script type="text/javascript">
