--- a/images/index.html
+++ b/images/index.html
@@ -2,10 +2,7 @@
 <html lang="en" itemscope itemtype="https://schema.org/WebPage">
   <head prefix="og: https://ogp.me/ns#">
     <meta charset="UTF-8" />
-    <link
-      rel="shortcut icon"
-      href="https://www.erikpaluka.com/img/favicon.ico"
-    />
+    <link rel="shortcut icon" href="https://erikpaluka.com/img/favicon.ico" />
     <meta
       name="keywords"
       content="human-computer interaction, information visualization, computer science, erik paluka, technology, development"
@@ -50,7 +47,7 @@
     <meta
       name="image"
       property="og:image"
-      content="https://www.erikpaluka.com/img/P-300x218.jpg"
+      content="https://erikpaluka.com/img/P-300x218.jpg"
     />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Erik Paluka's Website" />
@@ -69,10 +66,7 @@
       itemprop="description"
       content="Master of Science in Computer Science specializing in Human-Computer Interaction (Spatial & Multi-Touch Interaction) and Information Visualization."
     />
-    <meta
-      itemprop="image"
-      content="https://www.erikpaluka.com/img/P-300x218.jpg"
-    />
+    <meta itemprop="image" content="https://erikpaluka.com/img/P-300x218.jpg" />
 
     <!-- Human-Computer Interaction (HCI) within the realm of Computer Science. Erik is a graduate student in HCI and a member of the vialab research group at UOIT. -->
 
@@ -98,7 +92,7 @@
       <div class="socialIcons">
         <a href="https://github.com/paluka" target="_blank" title="GitHub"
           ><img
-            src="https://www.erikpaluka.com//img/socialIcons//github.png"
+            src="https://erikpaluka.com//img/socialIcons//github.png"
             width="56"
             height="25"
             alt="GitHub Account"
@@ -109,7 +103,7 @@
           target="_blank"
           title="Google Scholar"
           ><img
-            src="https://www.erikpaluka.com//img/socialIcons//googleScholar.png"
+            src="https://erikpaluka.com//img/socialIcons//googleScholar.png"
             width="25"
             height="25"
             alt="Google Scholar Account"
@@ -120,7 +114,7 @@
           target="_blank"
           title="LinkedIn"
           ><img
-            src="https://www.erikpaluka.com//img/socialIcons//LinkedIn_IN_Icon_25px.png"
+            src="https://erikpaluka.com//img/socialIcons//LinkedIn_IN_Icon_25px.png"
             width="25"
             height="25"
             alt="LinkedIn Account"
@@ -128,7 +122,7 @@
 
         <a href="https://twitter.com/ErikPaluka" target="_blank" title="Twitter"
           ><img
-            src="https://www.erikpaluka.com//img/socialIcons//twitter.png"
+            src="https://erikpaluka.com//img/socialIcons//twitter.png"
             width="25"
             height="25"
             alt="Twitter Account"
@@ -139,7 +133,7 @@
           target="_blank"
           title="flickr"
           ><img
-            src="https://www.erikpaluka.com//img/socialIcons//flickr-25px.jpg"
+            src="https://erikpaluka.com//img/socialIcons//flickr-25px.jpg"
             width="25"
             height="25"
             alt="flickr Account"
@@ -151,7 +145,7 @@
           title="vialab Research Group"
         >
           <img
-            src="https://www.erikpaluka.com//img/socialIcons//vialab.png"
+            src="https://erikpaluka.com//img/socialIcons//vialab.png"
             width="70"
             height="25"
             alt="vialab Research Group Profile Page"
@@ -161,7 +155,7 @@
 
       <div id="nameHeader" itemscope itemtype="https://schema.org/Person">
         <div id="nameTitle">
-          <a href="https://www.erikpaluka.com/">
+          <a href="https://erikpaluka.com/">
             <span itemprop="name">Erik Paluka</span
             ><span style="font-size: 50%">, M.Sc. in Computer Science</span>
 
@@ -181,19 +175,19 @@
           <a
             class="nav-item-current"
             itemprop="name"
-            href="https://www.erikpaluka.com/images/"
+            href="https://erikpaluka.com/images/"
             >Images</a
           >
-          <!--<a <?php if (strpos($_SERVER['PHP_SELF'], 'projects/')) echo 'class="nav-item-current"'; else echo 'class="nav-item"';?> itemprop="name" href="https://www.erikpaluka.com/projects/">Projects</a>-->
+          <!--<a <?php if (strpos($_SERVER['PHP_SELF'], 'projects/')) echo 'class="nav-item-current"'; else echo 'class="nav-item"';?> itemprop="name" href="https://erikpaluka.com/projects/">Projects</a>-->
           <a class="nav-item" itemprop="name" href="/publications/"
             >Publications</a
           >
           <a class="nav-item" itemprop="name" href="/research/">Research</a>
-          <!--<a <?php if (strpos($_SERVER['PHP_SELF'], 'bio/index.php')) echo 'class="nav-item-current"'; else echo 'class="nav-item"';?> itemprop="name" href="https://www.erikpaluka.com/bio/">Bio</a>-->
-          <!--<a <?php if (strpos($_SERVER['PHP_SELF'], 'blog/')) echo 'class="nav-item-current"'; else echo 'class="nav-item"';?> itemprop="name" href="https://www.erikpaluka.com/blog/">Blog</a>-->
-          <!--<a <?php /*if (strpos($_SERVER['PHP_SELF'], 'algorithms/')) echo 'class="nav-item-current"'; else echo 'class="nav-item"';*/ ?> itemprop="name" href="https://www.erikpaluka.com/algorithms/">Algorithms</a>-->
+          <!--<a <?php if (strpos($_SERVER['PHP_SELF'], 'bio/index.php')) echo 'class="nav-item-current"'; else echo 'class="nav-item"';?> itemprop="name" href="https://erikpaluka.com/bio/">Bio</a>-->
+          <!--<a <?php if (strpos($_SERVER['PHP_SELF'], 'blog/')) echo 'class="nav-item-current"'; else echo 'class="nav-item"';?> itemprop="name" href="https://erikpaluka.com/blog/">Blog</a>-->
+          <!--<a <?php /*if (strpos($_SERVER['PHP_SELF'], 'algorithms/')) echo 'class="nav-item-current"'; else echo 'class="nav-item"';*/ ?> itemprop="name" href="https://erikpaluka.com/algorithms/">Algorithms</a>-->
 
-          <a class="nav-item" itemprop="name" href="https://www.erikpaluka.com/"
+          <a class="nav-item" itemprop="name" href="https://erikpaluka.com/"
             >Home</a
           >
         </div>
@@ -213,7 +207,7 @@
             width="61.5"
             height="20"
             style="float: left; margin-left: 5px"
-            src="https://www.erikpaluka.com/img/logos/chrome.png"
+            src="https://erikpaluka.com/img/logos/chrome.png"
           />
         </div>
         <a
